--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,11 @@ dependencies:
   google_sign_in: ^6.2.1
   flutter_bloc: ^8.1.4
   equatable: ^2.0.5
+  cloud_firestore: ^4.15.9
+  encrypt: ^5.0.3
+  crypto: ^3.0.3
   google_fonts: ^6.2.1
-  loading_animation_widget: ^1.3.0
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +26,6 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
-  assets:
-      - assets/images/
   uses-material-design: true
+  assets:
+    - assets/images/
