--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   crypto: ^3.0.3
   google_fonts: ^6.2.1
   loading_animation_widget: ^1.2.0+4
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
