--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   google_fonts: ^6.2.1
   loading_animation_widget: ^1.2.0+4
   http: ^1.1.0
+  flutter_vertical_heatmap: ^1.0.3
 
 dev_dependencies:
   flutter_test:
