--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^2.27.1
   firebase_auth: ^4.17.9
+  firebase_messaging: ^14.7.9
   google_sign_in: ^6.2.1
   flutter_bloc: ^8.1.4
   equatable: ^2.0.5
@@ -21,6 +22,10 @@ dependencies:
   loading_animation_widget: ^1.2.0+4
   http: ^1.1.0
   flutter_vertical_heatmap: ^1.0.3
+  shared_preferences: ^2.2.2
+  timezone: ^0.9.2
+  flutter_local_notifications: ^18.0.1
+  flutter_timezone: ^4.1.1
 
 dev_dependencies:
   flutter_test:
