--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   flutter_timezone: ^4.1.1
   share_plus: ^10.0.0
+  local_auth: ^2.3.0
 
 dev_dependencies:
   flutter_test:
