--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_timezone: ^4.1.1
   share_plus: ^10.0.0
   local_auth: ^2.3.0
+  pinput: ^5.0.1
 
 dev_dependencies:
   flutter_test:
